fix toList() error by adding collect(toList())